kafka/cmak/cmak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmak
spec:
  type: ClusterIP
  selector:
    app: cmak
  ports:
    - name: http
      port: 9000
      targetPort: 9000
