kafka/cmak/cmak-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cmak-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cmak.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: cmak
              servicePort: 9000
